# multimodal-ai-music-gen

./: .gitignore  GPTtasks.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MASTER_PLAN.md  MOTIF_ENGINE_INTEGRATION.md  NEW_FEATURES.md  PROTOCOL.md  READALL.md  README.md  ROADMAP_MASTERCLASS.md  TASK-001_IMPLEMENTATION_SUMMARY.md  TASK-003_SUMMARY.md  TASK-013_IMPLEMENTATION_SUMMARY.md  TASK-INSTRUMENT-RESOLUTION-SUMMARY.md  TASKS_CODING_AGENT.md  TODO.md  TODO2.md  TODO_PHASE5.md  TODOtasks.md  check_acceptance_criteria.py  check_midi.py  diagnose_audio.py  diagnose_mpc.py  instrument_shaper.py  knowing.md  main.py  package.json  pyrightconfig.json  remainingTasks.md  requirements.txt  spectrum_viewer.py  sprint2_acceptance_test.py  start_server.bat  test_agents.py  test_analyze_endpoint.py  test_client.py  test_expansions.py  test_generate_masterclass.py  test_intelligence.py  (+6 more)
.github/: agent_state.json  copilot-instructions.md
.github/agents/: recursive-builder.agent.md  recursive-supervisor.agent.md  recursive-verifier.agent.md  sprint-auditor-claude.agent.md  sprint-auditor-gemini.agent.md  sprint-auditor-gpt.agent.md  sprint-builder-claude.agent.md  (+8 more)
assets/: voicing_corpus.json
docs/: AGENT_ARCHITECTURE_PLAN.md  COPILOT_MODELS_INTEGRATION_PHASE_PLAN.md  CROSS_GENRE_MATURITY_MATRIX_2026-05-16.md  DDSP_NEURAL_GENERATION_RESEARCH.md  DYNAMIC_EQ_RESEARCH.md  ETHIOPIAN_INSTRUMENTS.md  IMPLEMENTATION_PLAN_NEXT.md  INSTRUMENT_INTELLIGENCE.md  INSTRUMENT_PATCH_PROPOSAL.md  MASTERCLASS_GUIDE.md  MASTERCLASS_MUSICALITY_IMPLEMENTATION_TRACKER.md  ROCK_FAMILY_BASELINE_2026-05-16_TASK_058.md  SPATIAL_AUDIO_RESEARCH.md  SPECTRAL_PROCESSING_RESEARCH.md  UPGRADE_PLAN_2026-05-14_1990S_ROCK_QUALITY_UI.md
instruments/: README.md
juce/: CMakeLists.txt  UI_IMPROVEMENTS_PHASE2.md
juce/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
juce/Source/Application/: AppConfig.h  AppState.cpp  AppState.h
juce/Source/Audio/: AudioEngine.cpp  AudioEngine.h  ExpansionInstrumentLoader.cpp  ExpansionInstrumentLoader.h  MidiPlayer.cpp  MidiPlayer.h  MixerGraph.cpp  MixerGraph.h  SF2Instrument.cpp  SF2Instrument.h  SFZInstrument.cpp  SFZInstrument.h  SFZParser.cpp  SFZParser.h  SamplerInstrument.cpp  SamplerInstrument.h  SimpleSynthVoice.h
juce/Source/Audio/Processors/: CompressorProcessor.h  DelayProcessor.h  EQProcessor.h  GainProcessor.cpp  GainProcessor.h  LimiterProcessor.h  MSProcessor.cpp  MSProcessor.h  PanProcessor.cpp  PanProcessor.h  ProcessorBase.h  ReverbProcessor.h  SaturationProcessor.h
juce/Source/Communication/: Messages.h  OSCBridge.cpp  OSCBridge.h  PythonManager.cpp  PythonManager.h
juce/Source/Project/: Command.h  ProjectState.cpp  ProjectState.h
juce/Source/UI/: AudioSettingsDialog.cpp  AudioSettingsDialog.h  ControlsPanel.cpp  ControlsPanel.h  ControlsWindow.cpp  ControlsWindow.h  ExpansionBrowserPanel.cpp  ExpansionBrowserPanel.h  FXChainPanel.cpp  FXChainPanel.h  FloatingToolWindow.cpp  FloatingToolWindow.h  GenreSelector.cpp  GenreSelector.h  InstrumentBrowserPanel.cpp  InstrumentBrowserPanel.h  ProgressOverlay.cpp  ProgressOverlay.h  PromptHistoryManager.cpp  PromptHistoryManager.h  PromptPanel.cpp  PromptPanel.h  RecentFilesPanel.cpp  RecentFilesPanel.h  TakeLaneComponent.cpp  TakeLaneComponent.h  TimelineComponent.cpp  TimelineComponent.h  TransportComponent.cpp  TransportComponent.h  VisualizationPanel.cpp  VisualizationPanel.h
juce/Source/UI/Mastering/: MasteringSuitePanel.cpp  MasteringSuitePanel.h
juce/Source/UI/Mixer/: ChannelStrip.cpp  ChannelStrip.h  LevelMeter.cpp  LevelMeter.h  MixerComponent.cpp  MixerComponent.h
juce/Source/UI/Theme/: AppLookAndFeel.cpp  AppLookAndFeel.h  ColourScheme.h  LayoutConstants.h  ThemeManager.h
juce/Source/UI/TrackList/: ArrangementView.cpp  ArrangementView.h  TrackHeaderComponent.cpp  TrackHeaderComponent.h
juce/Source/UI/Visualization/: GenreTheme.h  PianoRollComponent.cpp  PianoRollComponent.h  SpectrumComponent.cpp  SpectrumComponent.h  WaveformComponent.cpp  WaveformComponent.h
multimodal_gen/: __init__.py  arranger.py  assets_gen.py  audio_renderer.py  auto_gain_staging.py  bwf_writer.py  chord_extractor.py  config_loader.py  drum_humanizer.py  dynamics.py  ethio_melody.py  expansion_manager.py  file_analysis.py  fluidsynth_profiles.py  fluidsynth_runtime.py  genre_intelligence.py  genre_rules.py  genres.json  groove_templates.py  humanize_physics.py  instrument_index.py  instrument_intelligence.py  instrument_manager.py  instrument_patch.py  instrument_ranges.py  instrument_registry.py  instrument_resolution.py  microtiming.py  midi_generator.py  midi_recording.py  mix_chain.py  mix_engine.py  motif_engine.py  mpc_exporter.py  multiband_dynamics.py  output_analyzer.py  parametric_eq.py  pattern_library.py  performance_models.py  preset_loader.py  (+22 more)
scripts/: fluidsynth_env_proof.py  run_smoke_prompt.sh  smoke_1990s_rock.ps1  smoke_fluidsynth_profile_matrix.ps1
tests/: __init__.py  conftest.py  test_ambient_intent_and_strategy.py  test_arranger_cinematic_classical.py  test_arranger_ethiopian_family.py  test_arranger_house_ambient_pop.py  test_arranger_lofi_boom_bap.py  test_arranger_motifs.py  test_arranger_rnb_neosoul.py  test_arranger_rock.py  test_arranger_trap_modern.py  test_assets_gen.py  test_audio_renderer.py  test_auto_producer.py  test_bounded_effects.py  test_chord_extractor.py  test_config_loader.py  test_critics_module.py  test_drum_humanizer.py  test_dynamics.py  test_embeddings_intelligence.py  test_ethio_melody_embellisher.py  test_ethiopian_resolution_guardrails.py  test_fluidsynth_env_proof_contract.py  test_fluidsynth_profile_matrix_contract.py  test_fluidsynth_profiles.py  test_genre_dna_intelligence.py  test_genre_normalization.py  test_golden_prompts_smoke.py  test_harmonic_brain.py  test_instrument_manager.py  test_instrument_patch.py  test_intelligence_integration.py  test_jazz_strategy.py  test_jsonrpc_run_critics_midi.py  test_main_render_diagnostics.py  test_masterclass_integration.py  test_microtiming.py  test_midi_generator.py  test_midi_generator_lofi_boom_bap.py  (+55 more)
(+148 files in other folders)
